# segmentation

./: NOTICE  README.md  TODO  pyproject.toml
src/segmentation/: __init__.py  __main__.py  mesh.py  octree.py  pointcloud.py  reader.py  renderer.py  segment.py  style.py
